try safari flicker fix 4

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,8 @@ a {
   top: 0;
   height: 100vh;
     z-index: 1;
+    -webkit-backface-visibility: hidden;
+
 }
 
 .navbar-nav {
@@ -219,7 +221,6 @@ a {
    width: auto;
    margin-left: 1rem;
    margin-right: 1rem;
-   -webkit-backface-visibility: hidden;
 }
 
 .button:hover {
@@ -241,13 +242,11 @@ a {
 .button:focus svg {
   transform: rotate(+360deg);
   transition-duration: 900ms;
-  -webkit-backface-visibility: hidden
 }
 
 .nav-link svg {
   transform: rotate(+360deg);
   transition-duration: 500ms;
-  -webkit-backface-visibility: hidden
 }
 
 .svg-sizing {
@@ -314,6 +313,8 @@ display: block;
 
   .navbar {
     width: 3rem;
+    -webkit-backface-visibility: hidden;
+
   }
 
 .nav-link svg {
@@ -321,6 +322,8 @@ display: block;
   min-width: 1rem;
   max-width: 1.5rem;
   margin: 0 1rem;
+  -webkit-backface-visibility: hidden;
+
 }
 
 .nav-link {
@@ -391,15 +394,11 @@ select.form{
 /* navbar swipe effect :) */
   .expand-nav {
     width: 10rem;
-    -webkit-backface-visibility: hidden;
-
   }
 
   .expand-nav .logo svg {
     transform: rotate(-280deg);
     margin-left: 7.5rem;
-    -webkit-backface-visibility: hidden;
-
   }
 
   .expand-nav-logo-text {
